--- a/samples/index.html
+++ b/samples/index.html
@@ -88,6 +88,7 @@ footer nav>*:not(:last-of-type):after {content:" -";}
 <li><a href="animatedGIF.html">Animated GIF image generator</a>
 <li><a href="computeMedians.html">Compute medians</a>
 <li><a href="curves.html">Curves</a>
+<li><a href="imageFactory.html">Image factory</a>
 <li><a href="redPNG.html">Red PNG image generator</a>
 </ul>
 <footer>
