--- a/samples/animateOne.html
+++ b/samples/animateOne.html
@@ -20,6 +20,7 @@ one Japanese or Chinese character using animCJK SVG files">
 }
 </style>
 <title>AnimCJK Animate one</title>
+<link rel="icon" type="image/svg+xml" href="../animCJKIcon.svg">
 </head>
 <body>
 <h1>AnimCJK Animate one</h1>
