--- a/samples/animateSeveral.html
+++ b/samples/animateSeveral.html
@@ -33,6 +33,7 @@ several Japanese or Chinese characters using animCJK SVG files">
 }
 </style>
 <title>AnimCJK - Animate Several</title>
+<link rel="icon" type="image/svg+xml" href="../animCJKIcon.svg">
 </head>
 <body>
 <h1>AnimCJK - Animate Several</h1>
