--- a/samples/animatedGIF.html
+++ b/samples/animatedGIF.html
@@ -22,6 +22,7 @@ of a Japanese or Chinese character using animCJK SVG files">
 }
 </style>
 <title>AnimCJK Animated GIF</title>
+<link rel="icon" type="image/svg+xml" href="../animCJKIcon.svg">
 </head>
 <body>
 <h1>AnimCJK Animated GIF</h1>
