--- a/samples/color.html
+++ b/samples/color.html
@@ -27,6 +27,7 @@ pre
 }
 </style>
 <title>AnimCJK Color</title>
+<link rel="icon" type="image/svg+xml" href="../animCJKIcon.svg">
 </head>
 <body>
 <h1>AnimCJK Color</h1>
