--- a/samples/computeMedians.html
+++ b/samples/computeMedians.html
@@ -74,6 +74,7 @@ body
 }
 </style>
 <title>AnimCJK Compute medians</title>
+<link rel="icon" type="image/svg+xml" href="../animCJKIcon.svg">
 </head>
 <body>
 <h1>AnimCJK Compute medians</h1>
