--- a/samples/curves.html
+++ b/samples/curves.html
@@ -45,6 +45,7 @@
 pre {white-space: pre-wrap;}
 </style>
 <title>AnimCJK curves</title>
+<link rel="icon" type="image/svg+xml" href="../animCJKIcon.svg">
 </head>
 <body>
 <h1>AnimCJK curves</h1>
