--- a/samples/index.html
+++ b/samples/index.html
@@ -30,6 +30,7 @@ footer nav>*:not(:last-of-type):after {content:" -";}
 
 </style>
 <title>AnimCJK - Sample selector</title>
+<link rel="icon" type="image/svg+xml" href="../animCJKIcon.svg">
 </head>
 <body>
 <h1>AnimCJK - Sample selector</h1>
