--- a/samples/infinite.html
+++ b/samples/infinite.html
@@ -26,6 +26,7 @@ pre
 }
 </style>
 <title>AnimCJK Infinite</title>
+<link rel="icon" type="image/svg+xml" href="../animCJKIcon.svg">
 </head>
 <body>
 <h1>AnimCJK Infinite</h1>
