--- a/samples/red.html
+++ b/samples/red.html
@@ -33,6 +33,7 @@ pre
 }
 </style>
 <title>AnimCJK Red</title>
+<link rel="icon" type="image/svg+xml" href="../animCJKIcon.svg">
 </head>
 <body>
 <h1>AnimCJK Red</h1>
