--- a/samples/redPNG.html
+++ b/samples/redPNG.html
@@ -22,6 +22,7 @@ from AnimCJK SVG files">
 }
 </style>
 <title>AnimCJK Red PNG Demo</title>
+<link rel="icon" type="image/svg+xml" href="../animCJKIcon.svg">
 </head>
 <body>
 <h1 id="top">AnimCJK Red PNG Demo</h1>
