--- a/samples/size.html
+++ b/samples/size.html
@@ -53,6 +53,7 @@ pre
 .specificSelector #sizeMarks option {width:3em;text-align:center;margin:0;padding:0;}
 </style>
 <title>AnimCJK Size</title>
+<link rel="icon" type="image/svg+xml" href="../animCJKIcon.svg">
 </head>
 <body>
 <h1>AnimCJK Size</h1>
