--- a/samples/speed.html
+++ b/samples/speed.html
@@ -36,6 +36,7 @@ pre
 }
 </style>
 <title>AnimCJK Speed</title>
+<link rel="icon" type="image/svg+xml" href="../animCJKIcon.svg">
 </head>
 <body>
 <h1>AnimCJK Speed</h1>
