--- a/samples/rainbow.html
+++ b/samples/rainbow.html
@@ -32,6 +32,7 @@ pre
 }
 </style>
 <title>AnimCJK Rainbow</title>
+<link rel="icon" type="image/svg+xml" href="../animCJKIcon.svg">
 </head>
 <body>
 <h1>AnimCJK Rainbow</h1>
